# aws-lambda-stream-py

./: .coveragerc  .cspell.json  .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  pytest.ini  setup.py
awslambdastream/: __init__.py
awslambdastream/connectors/: eventbridge.py
awslambdastream/faults/: __init__.py  handled.py
awslambdastream/from_/: __init__.py  kinesis.py
awslambdastream/pipelines/: __init__.py
awslambdastream/utils/: __init__.py  batch.py  eventbridge.py  faults.py  json.py  logging.py  misc.py  opt.py  pipelines.py  print.py  rx.py  tags.py  time.py
templates/classify-service/: package.json  pyproject.toml
test/awslambdastream/connectors/: eventbridge_test.py
test/awslambdastream/faults/: __init___test.py
test/awslambdastream/pipelines/: __init___test.py
test/awslambdastream/utils/: args_test.py  eventbridge_test.py  faults_test.py  json_test.py  pipelines_test.py  print_test.py  tags_test.py  threadtest_test.py  time_test.py
