[tool.poetry]
name = "classify-service"
version = "0.1.0"
description = ""
authors = ["Ivan <4790093+snegostup@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
# awslambdastream = {git = "https://github.com/vsnig/aws-lambda-stream-py.git"}
awslambdastream = {path = "/Users/snegostup/Projects/aws-lambda-stream-py", develop = true}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
